@@ -1,3 +1,9 @@
+2011-04-27    <zag@manzanillo>
+
+	* tools/extract_individuals.py (load_individuals): now we keep the
+	first record found when there is a 'parental' conflict between
+	records.
+
 2011-04-24    <zag@pflip>
 
 	* bl/vl/individual/pedigree.py (import_pedigree): Changed
